# sidescantools

./: README.md  bottom_detection_napari_ui.py  cfg_parser.py  custom_threading.py  custom_widgets.py  egn_building_batch.py  egn_table_build.py  environment.yml  environment_cli.yml  georef_thread.py  jsf.py  main.py  main_cli.py  main_gui.py  plot_navigation.py  pyproject.toml  requirements.txt  sidescan_file.py  sidescan_georeferencer.py  sidescan_preproc.py  xtf_wrapper.py
conda-recipe/: meta.yaml
sidescan_out/: project_info.yml  project_info_schema.json
src/sidescantools/: __init__.py  aux_functions.py  bottom_detection_napari_ui.py  cfg_parser.py  custom_threading.py  egn_building_batch.py  egn_table_build.py  georef_thread.py  jsf.py  main.py  main_cli.py  main_gui.py  sidescan_file.py  sidescan_georeferencer.py  sidescan_preproc.py  xtf_wrapper.py
src/sidescantools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
